[Online reading] experiment handler